# DataScienceExamen

./: .env  .gitignore  README.md  pyproject.toml
models/: models.py
notebooks/: examen_deel1.ipynb  examen_deel2.ipynb  notebook.ipynb
scripts/: functions.py
